--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   image_picker: ^0.8.4+4
   path_provider: ^2.0.8
   path: ^1.8.0
+  sqflite: ^2.0.2
 
 dev_dependencies:
   # The "flutter_lints" package below contains a set of recommended lints to
